# avalon_board_game_dealer

./: readme.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/handler/: rest.rs
backend/src/models/: mod.rs  role.rs  state.rs
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: ReadyView.vue
