[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }

# 测试环境变量，.env
dotenv = "0.15.0"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"

# tower中间件
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }


rand = "0.8.5"